--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRhAGE2MRgz0HcYeIzRolox1W6J2eSgVM&libraries=places"></script>
   </body>
 </html>
